discussion/kv_engine/177143/177143_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46738: Ensure Consumer buffer size always ratio of bucket quota

Change-Id: I44768c8136420a6e1d77a30c3370ef6af0f77f87

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-07-07 15:48:34.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-07 17:28:22.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47661/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [3/91]: test dcp consumer flow control aggressive.....\kv_engine\engines\ep\tests\ep_testsuite_dcp.cc:1482 Test failed: `" (Expected `52428800", got `60000000" - Flow Control Buffer Size not equal to max)
(29 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47661/ )

Failure of GoogleTest "WarmupDiskTest.noDataFileCollectionCountsTest":

<pre>
[ RUN      ] WarmupDiskTest.noDataFileCollectionCountsTest
unknown file: error: C++ exception with description "remove: Incorrect function.: "C:\Jenkins\workspace\kv_engine-windows-master\build\kv_engine\ep_engine_ep_unit_tests.db/test.420301\0.couch.1"" thrown in the test body.
[  FAILED  ] WarmupDiskTest.noDataFileCollectionCountsTest (19 ms)
WarmupDiskTest.noDataFileCollectionCountsTest
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47661/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18850/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:45:29: error: out-of-line definition of "newConsumer" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
void DcpFlowControlManager::newConsumer(gsl::not_null<DcpConsumer*> consumer) {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:53:29: error: out-of-line definition of "handleDisconnect" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
void DcpFlowControlManager::handleDisconnect(
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:22: error: expected parameter declarator [clang-diagnostic-error]
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:22: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:50: error: expected ")" [clang-diagnostic-error]
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:21: note: to match this "("
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:27: error: expected parameter declarator [clang-diagnostic-error]
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:27: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:55: error: expected ")" [clang-diagnostic-error]
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:26: note: to match this "("
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18850/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:45:29:
error: out-of-line definition of "newConsumer" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18850/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40035/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:22:
error: use of undeclared identifier "gsl"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40035/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19991/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [3/91]: test dcp consumer flow control aggressive.../Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1482 Test failed: `" (Expected `52428800", got `60000000" - Flow Control Buffer Size not equal to max)
[2022-07-07T16:51:29.901Z] (81 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19991/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8630/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [3/91]: test dcp consumer flow control aggressive...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1480 Test failed: `" (Expected `52428800", got `60000000" - Flow Control Buffer Size not equal to max)
[2022-07-07T16:14:13.520Z] (44 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8630/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29146/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [3/91]: test dcp consumer flow control aggressive...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1482 Test failed: `" (Expected `52428800", got `60000000" - Flow Control Buffer Size not equal to max)
[2022-07-07T16:54:32.091Z] (1262 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29146/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29146/ )

Test exceeded the timeout:
[2022-07-07T16:54:32.091Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29146/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21105/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [3/91]: test dcp consumer flow control aggressive...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1480 Test failed: `" (Expected `52428800", got `60000000" - Flow Control Buffer Size not equal to max)
[2022-07-07T16:48:30.196Z] (68 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21105/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21105/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20748/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [3/91]: test dcp consumer flow control aggressive...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1480 Test failed: `" (Expected `52428800", got `60000000" - Flow Control Buffer Size not equal to max)
[2022-07-07T16:47:07.104Z] (150 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20748/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20748/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21794/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [3/91]: test dcp consumer flow control aggressive...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1482 Test failed: `" (Expected `52428800", got `60000000" - Flow Control Buffer Size not equal to max)
[2022-07-07T16:48:13.178Z] (1014 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21794/ )

ThreadSanitizer issue: data race /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/cookie.cc:207 in Cookie::getRequest() const  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21794/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18007/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8533/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
